# ts-compiler

./: .gitignore  Makefile  README.md  add-numbers.ts  dune-project  ts_compiler.opam
.github/workflows/: test.yml
lib/: dune  lexer.ml  lexer.mli  token.ml
test/: dune  helpers.ml  test_lexer.ml  test_ts_compiler.ml
